@@ -1,7 +1,6 @@
 runtime:
   requires:
     perl: '5.008001'
-    Carp: 0
     parent: 0
     Protocol::Redis: '1.0000'
 test:
