@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Replace with an empty subclass as the optimizations have been integrated into Protocol::Redis.
 
 0.003     2019-09-01 09:42:19 EDT
   - Fix parsing of empty bulk string (und3f, #1)
